appId: swmansion.enriched.markdown.example
tags:
  - input
  - smoke
  - bold
  - inline
---
- launchApp

- runFlow:
    file: '../../../../subflows/move_to_playground.yaml'

- tapOn:
    id: toolbar-bold

- tapOn:
    id: focus-button

- inputText: "Bold text"

- tapOn:
    id: toolbar-bold

- inputText: "Normal text"

- tapOn:
    id: blur-button

- runFlow:
    file: '../../../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'bold_toggle_off_input'
